# codetrust-verifier

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  pyproject.toml  start.py
.github/workflows/: ci.yml
demo/adversarial_tests/: test_payment_idempotency.py
demo/patches/: risky-payment.diff
demo/policies/: codetrust-scope.md
demo/risky_runtime/: __init__.py  payment_service.py
demo/tickets/: payment-reconciliation.md
scripts/: prove_demo.py
src/codetrust/: __init__.py  agent.py  cli.py  demo_product.py  diff_parser.py  github.py  impact.py  llm.py  models.py  real_pr_demo.py  report.py  rules.py  scope.py  testgen.py  ui.py  weather_dashboard.py  web.py  workspace_store.py
tests/: test_agent.py  test_diff_parser.py  test_github.py  test_impact.py  test_llm.py  test_rules.py  test_scope.py  test_start.py  test_testgen.py  test_weather_dashboard.py  test_web.py  test_workspace_store.py
