[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "codetrust-agent"
version = "0.2.0"
description = "Evidence-first verification agent for AI-generated pull requests"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Talent Hack participant" }]
dependencies = [
  "fastapi>=0.116",
  "openai>=2.0.0",
  "pydantic>=2.11",
  "python-dotenv>=1.1",
  "uvicorn>=0.35",
]

[project.optional-dependencies]
dev = ["pytest>=8.3", "ruff>=0.11"]

[project.scripts]
codetrust = "codetrust.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/codetrust"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-q"
filterwarnings = [
  "ignore:Using `httpx` with `starlette.testclient` is deprecated",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]
